@@ -335,6 +335,9 @@ Unreleased changes (1.0-dev)
 
 125. NUTCH-643 - ClassCastException in PDF parser (Guillaume Smet, ab)
 
+126. NUTCH-636 - Httpclient plugin https doesn't work on IBM JRE
+     (Curtis d'Entremont, ab)
+
      
 Release 0.9 - 2007-04-02
 
